Updated pkglint to 4.20. Changes since 4.19 include:
- Very much code cleanup
- Introduction of the --autofix flag for category Makefiles
- Rewrite of the code to check the DISTNAME section in package Makefiles
- Rewrite of the code to check category Makefiles

--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -672,3 +672,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated mail/mhonarc to 2.6.15nb1 [kristerw 2005-08-20]
 	Updated graphics/xplot to 0.90.7.1nb2 [kristerw 2005-08-20]
 	Updated devel/libbegemot to 1.9nb2 [kristerw 2005-08-20]
+	Updated pkgtools/pkglint to 4.20 [rillig 2005-08-21]
