--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.3825 2005/08/26 11:54:22 adam Exp $
+$NetBSD: TODO,v 1.3826 2005/08/27 12:05:03 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -618,7 +618,6 @@ Suggested package updates
 	o manedit-0.6.1
 	o mantis-0.19.2
 	o mapserver-4.2.5
-	o mathomatic-12.4.7
 	o mdd-20050318
 	o mdf2iso-0.3.0
 	o memcached-1.1.12 [pkg/30289]
