--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.3828 2005/08/27 22:25:51 recht Exp $
+$NetBSD: TODO,v 1.3829 2005/08/28 17:59:24 minskim Exp $
 
 Suggested new packages
 ======================
@@ -821,7 +821,6 @@ Suggested package updates
 	o phoon-20030120
 	o photopc-3.05
 	o php-4.4.0
-	o phpmyadmin-2.6.3
 	o phylip-3.62
 	o piewm-1.03
 	o pilot-link-0.11.8
