--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10982 2005/08/30 03:57:47 schmonz Exp $
+$NetBSD: CHANGES,v 1.10983 2005/08/30 06:46:04 seb Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3856,3 +3856,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated audio/taglib to 1.4 [seb 2005-08-29]
 	Updated security/cvm to 0.76 [schmonz 2005-08-30]
 	Updated audio/amarok to 1.3 [seb 2005-08-30]
+	Added textproc/qprint version 1.0 [simonb 2005-08-30]
