--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10985 2005/08/30 11:08:18 xtraeme Exp $
+$NetBSD: CHANGES,v 1.10986 2005/08/30 14:28:09 adrianp Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3857,5 +3857,8 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated security/cvm to 0.76 [schmonz 2005-08-30]
 	Updated audio/amarok to 1.3 [seb 2005-08-30]
 	Added textproc/qprint version 1.0 [simonb 2005-08-30]
-	Added emulators/generator-cbiere version 0.35r1 [xtraeme 20050830]
-	Updated databases/phpldapadmin to 0.9.6cnb2 [adrianp 20050830]
+	Added emulators/generator-cbiere version 0.35r1 [xtraeme 2005-08-30]
+	Updated databases/phpldapadmin to 0.9.6cnb2 [adrianp 2005-08-30]
+	Updated security/libtasn1 to 0.2.15 [adam 2005-08-30]
+	Updated security/opencdk to 0.5.7 [adam 2005-08-30]
+	Updated security/gnutls to 1.2.6 [adam 2005-08-30]
