--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11016 2005/09/04 05:07:49 taca Exp $
+$NetBSD: CHANGES,v 1.11017 2005/09/04 06:05:20 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3893,3 +3893,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added wm/cwm version 3 [xtraeme 2005-09-04]
 	Updated www/squid to 2.5.10nb2 [taca 2005-09-04]
 	Updated wm/windowlab to 1.32 [xtraeme 2005-09-04]
+	Updated databases/ruby-mysql to 2.7 [taca 2005-09-04]
