--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11068 2005/09/07 11:30:31 seb Exp $
+$NetBSD: CHANGES,v 1.11069 2005/09/07 11:45:41 darcy Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3965,3 +3965,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated math/gtklife to 4.2 [adam 2005-09-07]
 	Updated audio/amarok to 1.3.1 [seb 2005-09-07]
 	Updated databases/py-postgresql to 3.7 [darcy 2005-09-07]
+	Updated chat/gg2 to 2.2.8 [adam 2005-09-07]
