--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11069 2005/09/07 11:45:41 darcy Exp $
+$NetBSD: CHANGES,v 1.11070 2005/09/07 12:42:00 adam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3966,3 +3966,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated audio/amarok to 1.3.1 [seb 2005-09-07]
 	Updated databases/py-postgresql to 3.7 [darcy 2005-09-07]
 	Updated chat/gg2 to 2.2.8 [adam 2005-09-07]
+	Updated chat/gale to 0.99f [adam 2005-09-07]
