--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11070 2005/09/07 12:42:00 adam Exp $
+$NetBSD: CHANGES,v 1.11071 2005/09/07 13:59:03 adam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3967,3 +3967,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated databases/py-postgresql to 3.7 [darcy 2005-09-07]
 	Updated chat/gg2 to 2.2.8 [adam 2005-09-07]
 	Updated chat/gale to 0.99f [adam 2005-09-07]
+	Updated emulators/wine to 20050830 [adam 2005-09-07]
