--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11076 2005/09/07 22:41:36 reed Exp $
+$NetBSD: CHANGES,v 1.11077 2005/09/08 00:34:54 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3974,3 +3974,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated emulators/gpsim-oscilloscope to 0.1.2 [bouyer 2005-09-07]
 	Updated emulators/gpsim-ptyusart to 0.3.2 [bouyer 2005-09-07]
 	Added fonts/dejavu-ttf version 1.13 [reed 2005-09-07]
+	Updated net/ns to 2.28 [minskim 2005-09-08]
