--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11078 2005/09/08 02:52:07 minskim Exp $
+$NetBSD: CHANGES,v 1.11079 2005/09/08 06:31:19 jdc Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3976,3 +3976,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added fonts/dejavu-ttf version 1.13 [reed 2005-09-07]
 	Updated net/ns to 2.28 [minskim 2005-09-08]
 	Updated games/xmris to 4.0.5 [jdc 2005-09-08]
+	Updated math/pari to 2.1.6 [adam 2005-09-08]
