--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11082 2005/09/08 13:21:52 cube Exp $
+$NetBSD: CHANGES,v 1.11083 2005/09/08 13:46:22 martin Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3980,3 +3980,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added x11/gtk2+extra version 2.1.1 [bouyer 2005-09-08]
 	Updated sysutils/gkrellm to 2.2.7 [cube 2005-09-08]
 	Updated games/xscavenger to 1.4.4nb1 [martin 2005-09-08]
+	Updated games/wesnoth to 0.9.7 [wiz 2005-09-08]
