--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11083 2005/09/08 13:46:22 martin Exp $
+$NetBSD: CHANGES,v 1.11084 2005/09/08 15:31:35 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3981,3 +3981,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated sysutils/gkrellm to 2.2.7 [cube 2005-09-08]
 	Updated games/xscavenger to 1.4.4nb1 [martin 2005-09-08]
 	Updated games/wesnoth to 0.9.7 [wiz 2005-09-08]
+	Updated lang/php5 to 5.0.5 [jdolecek 2005-09-08]
