Use \*[Am] instead of & for HTML output.

--- a/pkgtools/pkglint/files/lintpkgsrc.1
+++ b/pkgtools/pkglint/files/lintpkgsrc.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: lintpkgsrc.1,v 1.25 2005/02/04 15:44:50 wiz Exp $
+.\"	$NetBSD: lintpkgsrc.1,v 1.26 2005/05/23 08:35:41 rillig Exp $
 .\"
 .\" Copyright (c) 1999 by David Brownlee (abs@netbsd.org)
 .\" Absolutely no warranty.
@@ -202,6 +202,6 @@ The
 algorithm used to obtain package versions
 and DEPENDS information is geared towards speed rather than
 perfection, though it has got somewhat better over time, it only
-parses the simplest Makefile conditionals. (a == b, no && etc).
+parses the simplest Makefile conditionals. (a == b, no \*[Am]\*[Am] etc).
 .Pp
 Potentially others, but non serious to date.
