--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11107 2005/09/12 15:41:32 minskim Exp $
+$NetBSD: CHANGES,v 1.11108 2005/09/12 16:36:39 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4010,3 +4010,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated converters/libiconv to 1.10nb2 [adam 2005-09-12]
 	Updated chat/gaim-encryption to 2.38 [gdt 2005-09-11]
 	Updated devel/chmlib to 0.36 [minskim 2005-09-12]
+	Updated sysutils/rsnapshot to 1.2.1 [abs 2005-09-13]
+
