--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11141 2005/09/20 05:05:04 schmonz Exp $
+$NetBSD: CHANGES,v 1.11142 2005/09/20 10:59:23 abs Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4048,4 +4048,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated devel/cvsync to 0.24.19 [gehenna 2005-09-19]
 	Updated graphics/netpbm to 10.29nb3 [schmonz 2005-09-20]
 	Updated devel/cpuflags to 0.92 [abs 2005-09-20]
-
+	Updated multimedia/xine-lib to 1.0.2nb1 [dmcmahill 2005-09-20]
