--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11172 2005/09/22 14:58:30 wiz Exp $
+$NetBSD: CHANGES,v 1.11173 2005/09/22 15:33:15 tron Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4084,3 +4084,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated graphics/p5-Gnome to 0.7009nb2 [wiz 2005-09-22]
 	Updated lang/sablevm to 1.1.3nb7 [wiz 2005-09-22]
 	Updated mail/mutt to 1.4.2.1nb4 [tron 2005-09-22]
+	Updated news/inn to 2.4.1nb8 [tron 2005-09-22]
