--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.3909 2005/09/27 09:32:47 wiz Exp $
+$NetBSD: TODO,v 1.3910 2005/09/27 12:28:56 tonio Exp $
 
 Suggested new packages
 ======================
@@ -470,7 +470,6 @@ Suggested package updates
 	o firefox-gtk1-1.0.7
 	o flac123-0.0.8
 	o flashplayer-0.4.13
-	o fluxbox-0.9.14
 	o fmsx-3.0
 	o fondu-040927
 	o fop-0.20.5
