--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11277 2005/10/01 10:56:43 minskim Exp $
+$NetBSD: CHANGES,v 1.11278 2005/10/01 12:49:07 taya Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4209,3 +4209,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Added editors/heme version 0.4 [minskim 2005-10-01]
 	Updated archivers/unalz to 0.50 [minskim 2005-10-01]
 	Updated inputmethod/anthy-elisp to 6700bnb1 [taya 2005-10-01]
+	Updated devel/pkg-config to 0.19nb1 [jmmv 2005-10-01]
+	Added pkgtools/verifypc version 1.0 [jmmv 2005-10-01]
