--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11281 2005/10/01 18:25:32 recht Exp $
+$NetBSD: CHANGES,v 1.11282 2005/10/01 18:30:36 agc Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4214,3 +4214,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added audio/gtkpod version 0.94.0 [smb 2005-10-01]
 	Updated textproc/ezxml to version 0.8.5 [recht 2005-10-01]
 	Added sysutils/fs-kit version 0.4 [agc 2005-10-01]
+	Updated editors/hnb to 1.9.17nb1 [kristerw 2005-10-01]
