--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11289 2005/10/02 06:37:23 taca Exp $
+$NetBSD: CHANGES,v 1.11290 2005/10/02 06:42:48 taca Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4223,3 +4223,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated security/ruby-digest to 1.8.2nb2 [taca 2005-10-02]
 	Updated security/ruby-openssl to 1.8.2nb2 [taca 2005-10-02]
 	Updated graphics/ruby-RMagick to 1.9.2 [taca 2005-10-02]
+	Updated graphics/cairo to 1.0.0nb1 [rh 2005-10-02]
