--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11301 2005/10/02 15:54:51 minskim Exp $
+$NetBSD: CHANGES,v 1.11302 2005/10/02 16:08:17 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4240,3 +4240,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated audio/amarok to 1.3.2 [seb 2005-10-02]
 	Updated x11/py-wxWidgets to 2.6.1 [minskim 2005-10-02]
 	updated devel/ExmanIDE to 0.9.4nb2 [minskim 2005-10-02]
+	Updated security/pwsafe to 0.2.0 [wiz 2005-10-02]
