--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11324 2005/10/04 01:52:05 minskim Exp $
+$NetBSD: CHANGES,v 1.11325 2005/10/04 02:32:40 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4268,3 +4268,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated x11/wxGTK to 2.6.2 [minskim 2005-10-04]
 	Updated x11/wxGTK-contrib to 2.6.2 [minskim 2005-10-04]
 	Updated x11/py-wxWidgets to 2.6.1.0nb1 [minskim 2005-10-04]
+	Updated graphics/gtkam to 0.1.12nb1 [minskim 2005-10-04]
