--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11342 2005/10/05 12:01:34 skrll Exp $
+$NetBSD: CHANGES,v 1.11343 2005/10/05 13:39:14 salo Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4287,3 +4287,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated multimedia/mpeg_encode to 1.5bnb3 [salo 2005-10-05]
 	Added emulators/ski version 0.9.81-l6 [skrll 2005-10-05]
 	Updated www/weex to 2.6.1nb1 [salo 2005-10-05]
+	Updated devel/glib2 to 2.8.3 [wiz 2005-10-05]
