Renamed replace-pkg to _flavor-replace and undo-replace-pkg to _flavor-undo-replace. The leading underscore makes it obvious that these targets are private, which saves redundant comments.

--- a/mk/flavor/README
+++ b/mk/flavor/README
@@ -55,8 +55,8 @@ The following make targets must be implemented:
   here.)
 * tarup-pkg
 * package-install
-* replace-pkg
-* undo-replace-pkg
+* _flavor-replace
+* _flavor-undo-replace
 
 = Bugs =
 
